# solana-wallet

./: CLAUDE.md  Cargo.toml  DEVELOPMENT_PLAN.md  FEATURE_UPDATE.md  PROJECT_SUMMARY.md  README.md  SOLANA_WALLET_ARCHITECTURE.md  dev.sh
backend/: Cargo.toml
backend/src/: executor.rs  main.rs
example-code/src/: main.rs
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  OutputPanel.tsx
frontend/src/pages/: Course.css  Course.tsx  Home.css  Home.tsx  Playground.tsx
shared/: courses.ts
src/: main.rs  theme.rs
src/app/: events.rs  mod.rs  state.rs
src/ui/: mod.rs  theme.rs
src/ui/components/: mod.rs
src/ui/views/: mod.rs
src/wallet/: account.rs  keypair.rs  mnemonic.rs  mod.rs  rpc.rs  signing_request.rs  storage.rs  transaction.rs
